# arber_calendar_generator

./: entries.json  entry.html  generate_school_calendar.py  pyproject.toml  tiffin-calendar.ics
