[tool.poetry]
name = "arber-calendar-generator"
version = "0.1.0"
description = ""
authors = ["Eamon Mason <eamon.mason@thomsonreuters.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
icalendar = "^5.0.13"
boto3 = "^1.35.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
